fixed stratification overlap bug

--- a/app/styles/characterization.styl
+++ b/app/styles/characterization.styl
@@ -125,10 +125,6 @@ $MIN_SIDEBAR_WIDTH = 450px
 	height 90vh
 	padding-right 4vw
 	
-.data-view-container:first-of-type
-	height 50vh
-	min-height 350px
-	
 .viewer .sidebar .data-view-container:first-of-type
 	max-width 100%
 	
