--- a/app/styles/d3.styl
+++ b/app/styles/d3.styl
@@ -9,6 +9,10 @@
 	width 100%
 	min-height 300px
 	
+#stratification-chart
+	height 40vh
+	min-height 350px
+	
 .radar-container
 	width 100%
 	margin-top 20px
